--- a/#src/scss/pages/articles.scss
+++ b/#src/scss/pages/articles.scss
@@ -18,6 +18,19 @@
                 flex: 0 1 100%;
             }
         }
+
+        &--col-3 {
+            @media (min-width: 992px) {
+                gap: 4.8rem 4rem;
+                & > li {
+                    flex: 0 1 calc(calc(100% / 3) - calc(8rem / 3));
+                }
+            }
+        }
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
 
@@ -47,7 +60,7 @@
         @media (max-width: $md2+px) {
             display: flex;
             flex-wrap: wrap;
-            gap:9px 16px;
+            gap: 9px 16px;
         }
 
         & > li {
