--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -85,5 +85,6 @@
 @import "pages/contact";
 @import "pages/technology";
 @import "pages/prices";
+@import "pages/articles-detail";
 // ==== AND PAGES =====================================================
 
