--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -68,6 +68,8 @@
 @import "../common/video/video";
 @import "../common/article-card/article-card";
 @import "../common/pagination/pagination";
+@import "../common/image-carousel/image-carousel";
+@import "../common/gallery-second/gallery-second";
 // ==== // COMMON BLOCKS =====================================================
 
 // ==== PAGES =====================================================
@@ -86,5 +88,6 @@
 @import "pages/technology";
 @import "pages/prices";
 @import "pages/articles-detail";
+@import "pages/about";
 // ==== AND PAGES =====================================================
 
