--- a/#src/common/faq-list/faq-list.scss
+++ b/#src/common/faq-list/faq-list.scss
@@ -1,6 +1,7 @@
 .faq-list {
     padding-left: 0;
     margin-bottom: 0;
+
     & > li {
         &:not(:last-child) {
             margin-bottom: 2.4rem;
@@ -94,6 +95,19 @@
             font-size: 16px;
             line-height: 24px;
             margin-top: 16px;
+        }
+    }
+
+    &--simple {
+        & .faq-list__title {
+            color: $textColor;
+            margin-bottom: 0;
+
+            @media (max-width: $md3+px) {
+                font-weight: 500;
+                font-size: 24px;
+                line-height: 28px;
+            }
         }
     }
 }
