--- a/#src/common/info-card/info-card.scss
+++ b/#src/common/info-card/info-card.scss
@@ -105,8 +105,6 @@
     }
 
     &--second {
-
-
         & .info-card__icon {
             transition: all 0.15s ease-in-out;
             background: rgba(255, 255, 255, 0.4);
@@ -128,26 +126,23 @@
             @media (max-width: $md3+px) {
                 min-height: 168px;
                 padding: 48px 12px 24px;
-
             }
 
             &::before {
-               
-                    top: 50%;
-                    left: 50%;
-                    width: calc(100% + 1px);
-                    height: calc(100% + 1px);
-                    transform: translate(-50%, -50%);
-                    background: linear-gradient(113.95deg, #e4e4e4 13.99%, #ffffff 104.81%);
-                    transition: all 0.3s ease;
-                    border-radius: 2.4rem;
-                    z-index: 1;
-                    transition: all 0.15s ease-in-out;
+                top: 50%;
+                left: 50%;
+                width: calc(100% + 1px);
+                height: calc(100% + 1px);
+                transform: translate(-50%, -50%);
+                background: linear-gradient(113.95deg, #e4e4e4 13.99%, #ffffff 104.81%);
+                transition: all 0.3s ease;
+                border-radius: 2.4rem;
+                z-index: 1;
+                transition: all 0.15s ease-in-out;
 
-                    @media (max-width: $md2+px) {
-                        display: none;
-                    }
-                
+                @media (max-width: $md2+px) {
+                    display: none;
+                }
             }
         }
 
@@ -163,6 +158,89 @@
                 line-height: 1.2em;
                 margin-bottom: 8px;
                 font-weight: 500;
+            }
+        }
+
+        & .info-card__text {
+            position: relative;
+            z-index: 2;
+            font-size: 1.6rem;
+            line-height: 1.5em;
+            transition: all 0.15s ease-in-out;
+
+            @media (max-width: $md2+px) {
+                font-size: 14px;
+                line-height: 20px;
+            }
+        }
+    }
+
+    &--third {
+        & .info-card__icon {
+            transition: all 0.15s ease-in-out;
+            background: rgba(255, 255, 255, 0.4);
+            box-shadow: inset 0px -0.932635px 0.932635px rgba(187, 255, 212, 0.1);
+
+            & img {
+                height: 4.2rem;
+                width: auto;
+
+                @media (max-width: $md3+px) {
+                    height: 28px;
+                }
+            }
+        }
+
+        & .info-card__inner {
+            overflow: visible;
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+            color: $textColor;
+            min-height: 25.8rem;
+            padding: 7.2rem 3.2rem 2.4rem;
+
+            @media (max-width: $md2+px) {
+                padding: 7.2rem 1.6rem 2.4rem;
+                background: linear-gradient(113.95deg, #e4e4e4 13.99%, #ffffff 104.81%);
+            }
+
+            @media (max-width: $md3+px) {
+                min-height: 168px;
+                padding: 48px 12px 24px;
+            }
+
+            &::before {
+                top: 50%;
+                left: 50%;
+                width: calc(100% + 1px);
+                height: calc(100% + 1px);
+                transform: translate(-50%, -50%);
+                background: linear-gradient(113.95deg, #e4e4e4 13.99%, #ffffff 104.81%);
+                transition: all 0.3s ease;
+                border-radius: 2.4rem;
+                z-index: 1;
+                transition: all 0.15s ease-in-out;
+
+                @media (max-width: $md2+px) {
+                    display: none;
+                }
+            }
+        }
+
+        & .info-card__title {
+            position: relative;
+            z-index: 2;
+            font-size: 2.2rem;
+            line-height: 1em;
+            margin-bottom: 0.8rem;
+            transition: all 0.15s ease-in-out;
+            color: $secondColor;
+
+            @media (max-width: $md3+px) {
+                line-height: 1.2em;
+                margin-bottom: 8px;
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 24px;
             }
         }
 
