--- a/#src/common/gallery/gallery.scss
+++ b/#src/common/gallery/gallery.scss
@@ -135,3 +135,14 @@
         }
     }
 }
+
+
+.threeD-gallery {
+    & iframe {
+        height: 48.5rem !important;
+
+        @media (max-width: $md3+px) {
+            height: 320px !important;
+        }
+    }
+}
