--- a/#src/common/team-carousel/team-carousel.scss
+++ b/#src/common/team-carousel/team-carousel.scss
@@ -12,7 +12,7 @@
             height: 100%;
             z-index: 1;
             transform: translateX(-50%);
-            background-color: $mainColor;
+            background: linear-gradient(360deg, #202020 -42.33%, #414141 90.25%);
         }
 
         & .swiper {
@@ -34,7 +34,9 @@
 
                 &.swiper-slide-active {
                     & .team-carousel-card {
-                        background-color: $secondColor;
+                        &:before {
+                            opacity: 1;
+                        }
 
                         & .team-carousel-card__calendar {
                             opacity: 1;
@@ -59,6 +61,7 @@
     padding-top: 4rem;
     transition: all 0.15s ease-in-out;
 
+
     @media (max-width: $md2+px) {
         width: 456px;
     }
@@ -69,9 +72,24 @@
         padding-top: 24px;
     }
 
+    &:before {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background: linear-gradient(344.6deg, #358B88 21.7%, #13B3AD 78.56%);
+        transition: all .15s ease-in-out;
+        opacity: 0;
+    }
+
     @media (min-width: 992px) {
         &:hover {
-            background-color: $secondColor;
+            &:before {
+                opacity: 1;
+            }
 
             & .team-carousel-card__calendar {
                 opacity: 1;
@@ -88,6 +106,8 @@
         display: flex;
         flex-direction: column;
         height: 100%;
+        position: relative;
+        z-index: 2;
     }
 
     &__calendar {
