--- a/#src/scss/pages/home.scss
+++ b/#src/scss/pages/home.scss
@@ -127,6 +127,15 @@
             z-index: 2;
             background: rgba(47, 47, 47, 0.8);
         }
+
+        & video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 
     &__body {
