--- a/#src/common/our-services/our-services.scss
+++ b/#src/common/our-services/our-services.scss
@@ -11,11 +11,16 @@
     &__list {
         padding-left: 0;
         margin-bottom: 0;
+
         @media (min-width: 992px) {
             margin-bottom: -3.2rem;  
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
+        }
+
+        &:not(:last-child) {
+            margin-bottom: 0;
         }
 
         & > li {
