--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -70,6 +70,7 @@
 @import "../common/pagination/pagination";
 @import "../common/image-carousel/image-carousel";
 @import "../common/gallery-second/gallery-second";
+@import "../common/popup/popup";
 // ==== // COMMON BLOCKS =====================================================
 
 // ==== PAGES =====================================================
