--- a/#src/common/main-grid/main-grid.scss
+++ b/#src/common/main-grid/main-grid.scss
@@ -5,6 +5,12 @@
         display: flex;
     }
 
+    &--content-lg {
+        & .main-grid__side-column {
+            flex: 0 0 30.47%;
+        }
+    }
+
     &__content {
         flex: 1 1 auto;
         min-width: 0;
@@ -18,7 +24,7 @@
     &__side-column {
         position: relative;
         display: block;
-        flex: 0 0 30.47%;
+        flex: 0 0 35.1%;
         margin-left: 1.6rem;
 
         @media (max-width: $md2+px) {
