--- a/#src/common/popup/popup.scss
+++ b/#src/common/popup/popup.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(#3c3c3c, 0.5);
+	background-color: rgba($mainColor, 0.8);
 	z-index: 50;
 	top: 0;
 	left: 0;
@@ -36,7 +36,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		padding: 1.5rem 0rem;
+		padding: 4.5rem 2rem;
 	}
 
 	&__close-btn {
@@ -53,16 +53,21 @@
 	&__content {
 		opacity: 0;
 		transition: all 0.8s ease 0s;
+		position: relative;
+		width: 100%;
+		max-width: 90.4rem;
 	}
 
 	&__close {
 		position: absolute;
-		top: 18px;
-		right: 18px;
+		top: 0;
+		right: 0;
 		padding: 5px;
 		cursor: pointer;
 		z-index: 5;
 		transition: all .3s ease;
+
+		transform: translateY(-100%);
 
 		@media (min-width: 992px) {
 			&:hover {
@@ -72,8 +77,8 @@
 
 		& > span {
 			position: relative;
-			width: 26px;
-			height: 26px;
+			width: 2.4rem;
+			height: 2.4rem;
 			transform: rotate(45deg);
 			display: block;
 			&:before {
@@ -98,4 +103,61 @@
 			}
 		}
 	}
+
+	@media (min-width: 992px) {
+		& .cta__inner {
+			padding-top: 0;
+		}
+	
+		& .cta__body {
+			border-radius: 0;
+		}
+	
+		& .cta__col-1 {
+			padding: 4.8rem 2rem 4.8rem 4rem;
+			flex: 0 0 56.2%;
+		}
+	
+		& .cta__col-2 {
+			min-height: 36rem;
+		}
+	
+		& .cta__title {
+			font-weight: 600 !important;
+		}
+	
+		& .cta__text {
+			font-size: 2rem;
+			line-height: 1.4em;
+			letter-spacing: -0.02em;
+		}
+	
+		& .cta__img {
+			padding: 0;
+		}
+	}
+
+	@media (max-width: $md2+px) {
+		& .cta__body {
+			background-color: #fff;
+			padding: 48px 40px;
+		}
+		& .cta__col-1 {
+			margin: 0;
+		}
+		& .cta__col-2 {
+			display: none;
+		}
+
+		& .cta__form-items {
+			margin-bottom: 0 !important;
+		}
+	}
+
+	@media (max-width: $md3+px) {
+		& .cta__body {
+			padding: 36px 20px;
+		}
+	}
+
 }
