--- a/#src/common/stock-card/stock-card.scss
+++ b/#src/common/stock-card/stock-card.scss
@@ -76,6 +76,10 @@
         & span {
             color: #e31151;
         }
+
+        & > *:last-child {
+            margin-bottom: 0;
+        }
     }
 
     &__text {
@@ -87,6 +91,10 @@
             font-size: 16px;
             line-height: 20px;
             max-width: 166px;
+        }
+
+        & > *:last-child {
+            margin-bottom: 0;
         }
     }
 
