--- a/#src/common/services-side-panel/services-side-panel.scss
+++ b/#src/common/services-side-panel/services-side-panel.scss
@@ -22,6 +22,11 @@
                 padding-bottom: 0.8rem;
                 padding-left: 2.5em;
                 margin-bottom: 0;
+                color: $secondColor;
+            }
+
+            &.item-active > a {
+                color: $warningColor !important;
             }
         }
 
