--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -71,6 +71,7 @@
 @import "../common/image-carousel/image-carousel";
 @import "../common/gallery-second/gallery-second";
 @import "../common/popup/popup";
+@import "../common/comments/comments";
 // ==== // COMMON BLOCKS =====================================================
 
 // ==== PAGES =====================================================
