--- a/#src/common/form/form.scss
+++ b/#src/common/form/form.scss
@@ -198,3 +198,9 @@
         }
     }
 }
+
+.wpcf7-not-valid-tip {
+    font-size: 0.7em !important;
+    padding-left: 1.2em;
+    line-height: 1.6em;
+}
