--- a/#src/common/team-carousel/team-carousel.scss
+++ b/#src/common/team-carousel/team-carousel.scss
@@ -29,6 +29,7 @@
         }
 
         & .swiper-slide {
+            height: auto;
             @media (max-width: $md2+px) {
                 width: auto;
 
@@ -56,7 +57,8 @@
 .team-carousel-card {
     display: flex;
     flex-direction: column;
-    height: 76.9rem;
+    height: 100%;
+    min-height: 76.9rem;
     position: relative;
     padding-top: 4rem;
     transition: all 0.15s ease-in-out;
@@ -68,7 +70,7 @@
 
     @media (max-width: $md3+px) {
         width: 264px;
-        height: 417px;
+        min-height: 417px;
         padding-top: 24px;
     }
 
@@ -103,6 +105,7 @@
     }
 
     &__body {
+        flex: 1 1 auto;
         display: flex;
         flex-direction: column;
         height: 100%;
@@ -179,13 +182,50 @@
         display: flex;
         justify-content: center;
         align-items: flex-end;
+        margin-top: auto;
         padding: 0 1rem;
-        flex: 1 1 auto;
+        height: 64.6rem;
+
+        @media (max-width: $md3+px) {
+            height: 34.6rem;
+        }
         & img {
             max-width: 100%;
             max-height: 100%;
             width: auto;
             height: auto;
+        }
+    }
+
+    &__btn-wrap {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 21.5rem;
+        z-index: 5;
+        background: linear-gradient(360deg, #000000 0%, rgba(78, 78, 78, 0) 101.41%);
+        @media (max-width: $md3+px) {
+            height: 12.5rem;
+        }
+    }
+
+    &__btn {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 5.6rem;
+
+        @media (max-width: $md3+px) {
+            bottom: 20px;
+        }
+
+        &.btn {
+            max-width: calc(100% - 40px);
+
+            @media (min-width: 768px) {
+                min-width: 25.7rem;
+            }
         }
     }
 }
