--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -4,7 +4,7 @@
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	-webkit-font-smoothing: antialiased;
+	// -webkit-font-smoothing: antialiased;
 }
 :focus,
 :active {
@@ -606,7 +606,7 @@ figure {
 	padding-left: 0;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 2.4rem 3.8rem;
+	gap: 2.4rem 3.4rem;
 	margin-bottom: 0;
 
 	@media (max-width: $md3+px) {
@@ -784,13 +784,17 @@ figure {
 		}
 	}
 
-	& .quote {
+	& .quote, & blockquote {
 		width: 100%;
 		max-width: 67.4rem;
 		margin: 4.8rem auto;
 
 		@media (max-width: $md3+px) {
 			margin: 24px auto;
+		}
+
+		&:first-child {
+			margin-top: 0;
 		}
 
 		& + h1,
@@ -801,6 +805,8 @@ figure {
 		& + h6 {
 			margin-top: 0rem !important;
 		}
+
+
 	}
 
 	& figure {
