--- a/#src/common/team-list/team-list.scss
+++ b/#src/common/team-list/team-list.scss
@@ -25,4 +25,13 @@
             margin-bottom: 24px;
         }
     }
+
+    &__title  {
+        margin-bottom: 4.4rem;
+        flex: 0 1 100%;
+        padding: 0 1.6rem;
+        @media (max-width: $md3+px) {
+            margin-bottom: 16px;
+        }
+    }
 }
