--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -72,6 +72,7 @@
 @import "../common/gallery-second/gallery-second";
 @import "../common/popup/popup";
 @import "../common/comments/comments";
+@import "../common/advantage/advantage";
 // ==== // COMMON BLOCKS =====================================================
 
 // ==== PAGES =====================================================
