--- a/#src/common/board/board.scss
+++ b/#src/common/board/board.scss
@@ -9,6 +9,10 @@
         border-radius: 16px;
     }
 
+    & .kk-star-ratings {
+		display: none !important;
+	}
+
     &:before {
         position: absolute;
         content: "";
