--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -675,6 +675,14 @@ figure {
 		}
 	}
 
+	& .kk-star-ratings {
+		display: none !important;
+
+		& + blockquote {
+			margin-top: 0 !important;
+		}
+	}
+
 	& h1,
 	& h2,
 	& h3,
