--- a/#src/scss/pages/contact.scss
+++ b/#src/scss/pages/contact.scss
@@ -22,7 +22,8 @@
             border-radius: 16px;
         }
 
-        & iframe {
+        & iframe,
+        & .map {
             position: absolute !important;
             top: 0;
             left: 0;
@@ -185,7 +186,6 @@
                 margin-top: 3.2rem;
             }
 
-
             @media (max-width: $md3+px) {
                 margin-top: 16px;
                 margin-bottom: 32px;
@@ -248,5 +248,56 @@
             height: 100%;
             z-index: 1;
         }
+    }
+}
+
+.ymaps-2-1-79-balloon {
+    border-radius: 2.4rem;
+    overflow: hidden;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25) !important;
+}
+.ymaps-2-1-79-balloon__content {
+    padding-top: 2.4rem !important;
+    padding-left: 2.4rem !important;
+    padding-bottom: 2.4rem !important;
+}
+.map-popup {
+    color: $mainColor;
+    &__title {
+        margin-bottom: 1rem;
+        font-weight: 600;
+        font-size: 1.8rem;
+        line-height: 1.33em;
+        letter-spacing: -0.02em;
+    }
+
+    & .contact__list {
+        display: block;
+        margin-bottom: 1.6rem;
+        & > li {
+            &:not(:last-child) {
+                margin-bottom: 1.6rem;
+            }
+        }
+    }
+
+    & .contact__list-title {
+        font-size: 1.4rem;
+        line-height: 1.29em;
+        letter-spacing: -0.02em;
+    }
+
+    & .contact__list-text {
+        font-size: 1.4rem;
+        line-height: 1.29em;
+        letter-spacing: -0.02em;
+    }
+
+    & .map-btn {
+        min-width: 19rem;
+        min-height: 3.4rem;
+        font-weight: 500;
+        font-size: 1.4rem;
+        line-height: 1.29em;
     }
 }
