--- a/#src/common/testimonial-card/testimonial-card.scss
+++ b/#src/common/testimonial-card/testimonial-card.scss
@@ -85,7 +85,7 @@
     }
 
     &__text {
-        color: $textColorThird;
+        color: $textColor;
         font-size: 1.8rem;
         line-height: 1.33em;
         letter-spacing: -0.025em;
