--- a/#src/common/services-card/services-card.scss
+++ b/#src/common/services-card/services-card.scss
@@ -142,7 +142,7 @@
     &--big {
         & .services-card__body {
             min-height: 48rem;
-
+            padding-bottom: 10.2rem;
             @media (max-width: $md3+px) {
                 min-height: 200px;
                 padding: 16px;
@@ -157,6 +157,12 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
+            }
+
+            &:before {
+                @media (min-width: 768px) {
+                    width: 76.45%;
+                }
             }
         }
 
@@ -178,6 +184,7 @@
             line-height: 1.23em;
             letter-spacing: -0.025em;
             margin-bottom: 2.4rem;
+            max-width: 51%;
 
             @media (max-width: $md3+px) {
                 font-size: 14px;
@@ -195,7 +202,7 @@
         }
 
         & .services-card__btn {
-            margin-bottom: auto;
+            margin-top: auto;
             min-width: 33.8rem;
 
             @media (max-width: $md3+px) {
