--- a/#src/common/video-testimonials/video-testimonials.scss
+++ b/#src/common/video-testimonials/video-testimonials.scss
@@ -37,9 +37,15 @@
                 }
 
                 & .video-testimonials__grid-item-text {
-                    @media (min-width: 768px) {
+                    @media (min-width: 992px) {
                         font-size: 2.6rem;
+                        padding: 1.5rem 3rem;
                     }
+                    @media (min-width: 768px) {
+                        font-size: 14px;
+                        padding: 1rem;
+                    }
+
                 }
             }
 
@@ -94,7 +100,13 @@
         justify-content: flex-end;
         padding: 1.5rem 3rem;
         font-size: 2rem;
+        line-height: 1.2em;
         pointer-events: none;
+
+        @media (max-width: $md2+px) {
+            padding: 10px;
+            font-size: 9px;
+        }
 
         @media (max-width: $md3+px) {
             padding: 10px 10px;
@@ -113,8 +125,9 @@
             left: 0;
             bottom: 0;
             width: 100%;
-            height: 35%;
+            height: 50%;
             z-index: 1;
+
             background: linear-gradient(
                 to bottom,
                 rgba(0, 0, 0, 0) 0%,
