--- a/#src/scss/pages/contact.scss
+++ b/#src/scss/pages/contact.scss
@@ -255,6 +255,7 @@
     border-radius: 2.4rem;
     overflow: hidden;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25) !important;
+    max-width: 43rem;
 }
 .ymaps-2-1-79-balloon__content {
     padding-top: 2.4rem !important;
