--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -466,6 +466,7 @@ figure {
 		margin-bottom: 0;
 	}
 
+
 	& h3.head__title {
 		@media (max-width: $md3+px) {
 			font-weight: 600;
@@ -479,6 +480,27 @@ figure {
 
 		@media (max-width: $md2+px) {
 			margin-bottom: 8px;
+		}
+	}
+
+	& h1.head__title {
+		font-size: 4.4rem;
+		line-height: 1.14em;
+		letter-spacing: -0.02em;
+		font-weight: 400;
+	
+		@media (max-width: $md3+px) {
+			font-weight: 600;
+			font-size: 28px;
+			line-height: 1.14em;
+		}
+	
+		&.mb-3 {
+			margin-bottom: 2.4rem !important;
+	
+			@media (max-width: $md3+px) {
+				margin-bottom: 16px !important;
+			}
 		}
 	}
 
