--- a/#src/scss/pages/about.scss
+++ b/#src/scss/pages/about.scss
@@ -29,6 +29,17 @@
     &__title {
         grid-area: title;
         margin-bottom: 4.8rem;
+        font-size: 4.4rem;
+        line-height: 1.14em;
+        letter-spacing: -0.02em;
+        font-weight: 400;
+    
+        @media (max-width: $md3+px) {
+            font-weight: 600;
+            font-size: 28px;
+            line-height: 1.14em;
+        }
+    
 
         @media (max-width: $md3+px) {
             margin-bottom: 16px;
