--- a/#src/scss/pages/home.scss
+++ b/#src/scss/pages/home.scss
@@ -164,6 +164,17 @@
         margin-bottom: 4.8rem;
         font-weight: 400;
 
+        font-size: 4.4rem;
+        line-height: 1.14em;
+        letter-spacing: -0.02em;
+        font-weight: 400;
+    
+        @media (max-width: $md3+px) {
+            font-weight: 600;
+            font-size: 28px;
+            line-height: 1.14em;
+        }
+
         @media (max-width: $md3+px) {
             font-weight: 600;
             margin-bottom: 16px;
