--- a/#src/common/info-card/info-card.scss
+++ b/#src/common/info-card/info-card.scss
@@ -259,7 +259,7 @@
     }
 }
 
-a.info-card--second {
+.info-card--second {
     @media (min-width: 992px) {
         &:hover {
             & .info-card__icon {
