--- a/#src/common/services-card/services-card.scss
+++ b/#src/common/services-card/services-card.scss
@@ -17,6 +17,10 @@
 
         & img {
             object-position: right center;
+
+            @media (max-width: $md3+px) {
+                transform: translateX(8%);
+            }
         }
 
         @media (max-width: $md3+px) {
@@ -30,17 +34,17 @@
 
         &:before {
             position: absolute;
-            content: '';
+            content: "";
             top: 0;
             left: 0;
             width: 92.44%;
             height: 100%;
             z-index: 2;
-            background: linear-gradient(90.12deg, #039D98 54.96%, rgba(3, 157, 152, 0) 91.25%);
+            background: linear-gradient(90.12deg, #039d98 54.96%, rgba(3, 157, 152, 0) 91.25%);
 
             @media (max-width: $md3+px) {
-                width: 90.24%;
-                background: linear-gradient(90.12deg, #039D98 54.96%, rgba(3, 157, 152, 0) 91.25%);
+                width: 80.24%;
+                background: linear-gradient(90.12deg, #039d98 23.36%, rgba(3, 157, 152, 0) 91.25%);
             }
         }
     }
@@ -90,7 +94,6 @@
             margin-bottom: 4px;
             max-width: none;
         }
-        
     }
 
     &__price {
@@ -163,6 +166,11 @@
                 @media (min-width: 768px) {
                     width: 76.45%;
                 }
+
+                @media (max-width: $md3+px) {
+                    width: 90.24%;
+                    background: linear-gradient(90.12deg, #039d98 54.96%, rgba(3, 157, 152, 0) 91.25%);
+                }
             }
         }
 
@@ -185,6 +193,7 @@
             letter-spacing: -0.025em;
             margin-bottom: 2.4rem;
             max-width: 51%;
+            width: 46rem;
 
             @media (max-width: $md3+px) {
                 font-size: 14px;
@@ -192,6 +201,7 @@
                 margin-bottom: 8px;
                 max-width: 58%;
                 color: #fff;
+                width: 250px;
             }
         }
 
@@ -208,6 +218,58 @@
             @media (max-width: $md3+px) {
                 min-width: auto;
                 margin-top: 16px;
+            }
+        }
+    }
+
+    &--second {
+        @media (max-width: $md3+px) {
+            position: relative;
+            overflow: hidden;
+            border-radius: 24px;
+
+            & .services-card__bg {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 1;
+                padding-bottom: 0;
+            }
+
+            & .services-card__body {
+                min-height: 200px;
+                padding: 16px;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+            }
+
+            & .services-card__title {
+                color: #fff;
+                margin-bottom: 12px;
+                max-width: 170px;
+            }
+
+            & .services-card__text {
+                display: none;
+            }
+
+            & .services-card__price {
+                display: none;
+            }
+
+            & .services-card__btn.btn {
+                min-height: 42px;
+                background-color: #fff;
+                color: $secondColor !important;
+                min-width: 200px;
+                border: none;
+                width: auto;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 18px;
             }
         }
     }
