--- a/#src/scss/pages/home.scss
+++ b/#src/scss/pages/home.scss
@@ -77,6 +77,10 @@
             border-radius: 24px;
             padding-bottom: 60.97%;
             margin-bottom: 12px;
+
+            & img {
+                object-position: top;
+            }
         }
     }
 
@@ -370,15 +374,14 @@
     }
 
     &__map {
-        height: 0;
-        padding-bottom:47.17%;
+        height: 52.5rem;
         overflow: hidden;
         border-radius: 4rem;
         margin-bottom: 3.2rem;
         position: relative;
 
         @media (max-width: $md3+px) {
-            padding-bottom: 100%;
+            height: 275px;
             border-radius: 24px;
             margin-bottom: 0;
         }
