--- a/#src/common/services-side-panel/services-side-panel.scss
+++ b/#src/common/services-side-panel/services-side-panel.scss
@@ -39,23 +39,38 @@
             &[data-spoller-trigger] {
                 position: relative;
 
-                &:before {
+                & .chevron-down {
                     position: absolute;
-                    content: '';
                     top: 50%;
                     transform: translateY(-50%);
                     right: 0;
-                    height: 1.6rem;
-                    width: 1.6rem;
-                    background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMTYiIHZpZXdCb3g9IjAgMCAxNiAxNiIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEzIDZMOCAxMUwzIDYiIHN0cm9rZT0iIzJGMkYyRiIgc3Ryb2tlLXdpZHRoPSIyIiBzdHJva2UtbGluZWNhcD0icm91bmQiIHN0cm9rZS1saW5lam9pbj0icm91bmQiLz4KPC9zdmc+Cg==);
-                    background-repeat: no-repeat;
-                    background-size: contain;
                     transition: all .15s ease-in-out;
+                    padding: 0.5rem;
+                    cursor: pointer;
+
+                    @media (min-width: 992px) {
+                        &:hover {
+                            background-color: rgba($mainColor, 0.1);
+                        }
+                    }
+
+                    &:before {
+                        display: block;
+                        content: '';
+                        right: 0;
+                        height: 1.6rem;
+                        width: 1.6rem;
+                        background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMTYiIHZpZXdCb3g9IjAgMCAxNiAxNiIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEzIDZMOCAxMUwzIDYiIHN0cm9rZT0iIzJGMkYyRiIgc3Ryb2tlLXdpZHRoPSIyIiBzdHJva2UtbGluZWNhcD0icm91bmQiIHN0cm9rZS1saW5lam9pbj0icm91bmQiLz4KPC9zdmc+Cg==);
+                        background-repeat: no-repeat;
+                        background-size: contain;
+                        transition: all .15s ease-in-out;
+                    }
                 }
 
+
                 &.active {
-                    &:before {
-                        transform: translateY(-50%) scale(1, -1);
+                    & .chevron-down:before {
+                        transform: scale(1, -1);
                     }
                 }
             }
