--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -716,6 +716,60 @@ figure {
 		}
 	}
 
+	& h1 {
+		font-size: 4.4rem;
+		line-height: 1.14em;
+		letter-spacing: -0.02em;
+		font-weight: 400;
+	
+		@media (max-width: $md3+px) {
+			font-weight: 600;
+			font-size: 28px;
+			line-height: 1.14em;
+		}
+	
+		&.mb-3 {
+			margin-bottom: 2.4rem !important;
+	
+			@media (max-width: $md3+px) {
+				margin-bottom: 16px !important;
+			}
+		}
+	}
+	
+	& h2 {
+		font-weight: 600;
+		font-size: 3.2rem;
+		line-height: 1.06em;
+		letter-spacing: -0.02em;
+	
+		@media (max-width: $md2+px) {
+			font-size: 24px;
+			line-height: 1.17em;
+		}
+	}
+	
+	& h3 {
+		font-weight: 600;
+		font-size: 2.6rem;
+		line-height: 1.08em;
+		letter-spacing: -0.02em;
+	}
+	
+	& h4 {
+		font-weight: 600;
+		font-size: 2.4rem;
+		line-height: 1.17em;
+		letter-spacing: -0.02em;
+	}
+	
+	& h5 {
+		font-weight: 500;
+		font-size: 2.2rem;
+		line-height: 1.31em;
+		letter-spacing: -0.02em;
+	}
+
 	& h1,
 	& h2,
 	& h3,
